# 3DSceneEditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assimp/: LoadModelWidget.cpp  LoadModelWidget.h  camera.cpp  camera.h
assimp/model/: AssMesh.cpp  AssMesh.h  AssModel.cpp  AssModel.h
qml/: main.qml
resource/shader/: assimp_model_fs.glsl  assimp_model_vs.glsl
